Refactor error handling in WB-weather - fixes #1
WB-weather now has much better error messaging for when something goes wrong.

--- a/WB-weather/translations/en.json
+++ b/WB-weather/translations/en.json
@@ -2,7 +2,7 @@
   "WLOADING": "Loading Weather Data&hellip;",
 
   "TODAY": "Today",
-  
-  "SERVER_ERROR": "Error reaching DarkSky servers. <br> Check your internet connection or try again later.",
+  "ERROR": "DarkSky Error: ",
+  "CONNECTION_ERROR": "Error reaching DarkSky servers. <br> Check your internet connection or try again later.",
   "API_KEY_MISSING": "ERROR: Incorrect or missing DarkSky API key. <br> Make sure your DarkSky API key was added correctly in config.js."
 }
